[project]
name = "ocde"
version = "0.1.0"
description = "Oracle Confidence Divergence Engine — multiplies every alpha"
requires-python = ">=3.11"
dependencies = [
    # Pinned (==) per security baseline
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "redis==5.0.8",
    "structlog==24.4.0",
    "websockets==13.0.1",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.8",
    "mypy==1.11.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "TID", "PL"]
ignore = ["S101", "PLR2004"]   # asserts in tests, magic numbers

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
